--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.1.7",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
